Tweak contact form #43 - Use more specific target for contact form AJAX action - Move validateEmail function comments inside function - Add separate area for functions in app.js - Move .messages styles into forms.scss - Customize success and error message text - Wrap contact form in a form tag - Reset contact form after email has been successfully sent - Prevent normal form tag submission - Tweak success and error message text styles

--- a/assets/stylesheets/forms.scss
+++ b/assets/stylesheets/forms.scss
@@ -84,3 +84,17 @@
     color: $white !important;
   }
 }
+
+.messages > span {
+  display: none;
+  font-family: $roboto;
+  font-weight: bold;
+  margin: 0;
+  padding: 6px 12px;
+  &.message-success {
+    color: transparentize($white,0.1);
+  }
+  &.message-fail, &.message-email, &.message-interest {
+    color: $red;
+  }
+}
